finish index. User acess level.

--- a/home-operador.html
+++ b/home-operador.html
@@ -14,17 +14,15 @@
   </head>
   <body>
       
-  <section class="user-level">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col">
-            <h1>Qual o seu nível de acesso?</h1>
-            <a class="btn btn-primary btn-lg m-3 user-level__login-link" href="home-operador.html" role="button">Operador</a>
-            <a class="btn btn-primary btn-lg m-3 user-level__login-link" href="home-suporte.html" role="button">Equipe de suporte</a>
-          </div>
+<section class="user-level">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col">
+          <h1>Bem-vindo, como podemos ajudar?</h1>
         </div>
       </div>
-  </section>
+    </div>
+</section>
 
     
 
