finish header and section-hero (of operador)

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   </head>
   <body>
       
-  <section class="user-level">
+  <section class="user-level bg-dark">
       <div class="container">
         <div class="row align-items-center">
           <div class="col">
-            <h1>Qual o seu nível de acesso?</h1>
+            <h1 class="text-white text-center">Qual o seu nível de acesso?</h1>
             <a class="btn btn-primary btn-lg m-3 user-level__login-link" href="home-operador.html" role="button">Operador</a>
             <a class="btn btn-primary btn-lg m-3 user-level__login-link" href="home-suporte.html" role="button">Equipe de suporte</a>
           </div>
