--- a/home-suporte.html
+++ b/home-suporte.html
@@ -21,9 +21,8 @@
       <nav class="navbar navbar-expand-sm navbar-light bg-light shadow-sm">
         <div class="container">
           <a class="nav-link d-none d-md-block" href="index.html">Retornar ao SiCaPEx</a>
-          <a class="navbar-brand mr-0" href="home-operador.html">
-            <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
-            HelpOne
+          <a class="navbar-brand mr-0 my-1" href="home-operador.html">
+            <img src="assets/images/logo.png" height="55" alt="HelpOne - Sistema de HelpDesk">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -31,10 +30,19 @@
         
           <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+              <li class="nav-item align-self-center">
+                <button type="button" class="btn btn-link text-secondary" title="acessibilidade para daltônicos" data-toggle="modal" data-target="#exampleModalCenter">
+                  <i class="fas fa-low-vision fa-2x"></i>
+                </button>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
-                  Matheus Fernandes
+                  <span class="d-inline-block">
+                    <img class="rounded-circle" src="assets/images/user-circle.png" height="42" alt="Matheus Fernandes">
+                  </span>
+                  <span class="d-inline-block">
+                    Matheus Fernandes
+                  </span>
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#">Meus chamados</a>
@@ -265,19 +273,58 @@
       </section>
     </main>
 
-    <footer class="footer border-top py-3">
-      <div class="container-fluid">
-        <div class="footer__logo-box d-inline-block mx-4">
-          <a class="navbar-brand mr-0" href="home-suporte.html">
-            <img src="https://getbootstrap.com/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
-            HelpOne
+    <footer class="footer border-top py-2">
+      <div class="container-fluid text-center">
+        <div class="footer__logo-box d-inline-block mx-4 my-3">
+          <a class="navbar-brand mr-0" href="home-operador.html">
+            <img src="assets/images/logo.png" height="50" alt="HelpOne - Sistema de HelpDesk">
           </a>
         </div>
-        <p class="footer__text d-inline-block mb-0">
+        <p class="footer__text d-inline-block mb-3 mt-2">
           Copyright @ 2018 | DGP - QGEx - Bloco E - 3º Piso - SMU - CEP 70630-901 - Brasília-DF 
         </p>
       </div>
     </footer>
+    
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title text-center" id="exampleModalCenterTitle">ColorADD® COLOR IDENTIFICATION SYSTEM FOR COLORBLIND PEOPLE<br><small class="text-right">- MIGUEL NEIVA DESIGN</small></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="http://www.coloradd.net/imgs/banner/5.gif" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="http://www.coloradd.net/imgs/banner/6.gif" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="http://www.coloradd.net/imgs/banner/7.gif" alt="Third slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="http://www.coloradd.net/imgs/banner/8.gif" alt="Fourth slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                <i class="fas fa-angle-left fa-2x carousel-control-prev-icon text-dark"></i>
+                <span class="sr-only">Previous</span> 
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                <i class="fas fa-angle-right fa-2x carousel-control-prev-icon text-dark"></i>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
