finish artigo-page and topic-results and make then responsive

--- a/home-operador.html
+++ b/home-operador.html
@@ -63,7 +63,7 @@
             <div class="col-md-9 col-lg-7">
               <h1 class="text-white text-center mb-3">Como podemos ajuda-lo?</h1>
               <div class="search-form text-center">
-                <form action="resultados-pesquisa.html" class="form-inline my-2 my-lg-0">
+                <form action="search-results.html" class="form-inline my-2 my-lg-0">
                   <i class="fas fa-search"></i><input class="form-control mr-sm-2 w-100" type="search" placeholder="Search" aria-label="Search">
                 </form>
               </div>
@@ -79,44 +79,44 @@
               <h2 class="h3 mb-2">Soluções Frequentes</h2>
               <div class="row mt-3">
                 <div class="col-md-6 p-2">
-                  <a href="#" class="btn btn-light no-white-space text-left p-3 border" role="button">
+                  <a href="artigo-page.html" class="btn btn-light no-white-space text-left p-3 border" role="button">
                     Some text in heto with some problem?
                   </a>
                 </div>
                 <div class="col-md-6 p-2">
-                  <a href="#" class="btn btn-light no-white-space text-left p-3 border" role="button">
+                  <a href="artigo-page.html" class="btn btn-light no-white-space text-left p-3 border" role="button">
                     Some text in heto with some problem?
                   </a>
                 </div>
                 <div class="col-md-6 p-2">
-                  <a href="#" class="btn btn-light no-white-space text-left p-3 border" role="button">
+                  <a href="artigo-page.html" class="btn btn-light no-white-space text-left p-3 border" role="button">
                     Some text in heto with some problem?
                   </a>
                 </div>
                 <div class="col-md-6 p-2">
-                  <a href="#" class="btn btn-light no-white-space text-left p-3 border" role="button">
+                  <a href="artigo-page.html" class="btn btn-light no-white-space text-left p-3 border" role="button">
                     Some text in heto with some problem?
                   </a>
                 </div>
               </div>
               <div class="row d-none d-md-flex">
                 <div class="col-6 p-2">
-                  <a href="#" class="btn btn-light no-white-space text-left p-3 border" role="button">
+                  <a href="artigo-page.html" class="btn btn-light no-white-space text-left p-3 border" role="button">
                     Some text in heto with some problem?
                   </a>
                 </div>
                 <div class="col-6 p-2">
-                  <a href="#" class="btn btn-light no-white-space text-left p-3 border" role="button">
+                  <a href="artigo-page.html" class="btn btn-light no-white-space text-left p-3 border" role="button">
                     Some text in heto with some problem?
                   </a>
                 </div>
                 <div class="col-6 p-2">
-                  <a href="#" class="btn btn-light no-white-space text-left p-3 border" role="button">
+                  <a href="artigo-page.html" class="btn btn-light no-white-space text-left p-3 border" role="button">
                     Some text in heto with some problem?
                   </a>
                 </div>
                 <div class="col-6 p-2">
-                  <a href="#" class="btn btn-light no-white-space text-left p-3 border" role="button">
+                  <a href="artigo-page.html" class="btn btn-light no-white-space text-left p-3 border" role="button">
                     Some text in heto with some problem?
                   </a>
                 </div>
@@ -144,9 +144,9 @@
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample"><!-- card-body -->
                       <div class="card-body">
                         <div class="list-group list-group-flush">
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
                         </div>
                       </div>
                     </div><!-- /.card-body -->
@@ -169,9 +169,9 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                       <div class="card-body">
                         <div class="list-group list-group-flush">
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
                         </div>
                       </div>
                     </div><!-- /.card-body -->
@@ -194,9 +194,9 @@
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample"><!-- /.card-body -->
                       <div class="card-body">
                         <div class="list-group list-group-flush">
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
                         </div>
                       </div>
                     </div><!-- /.card-body -->
@@ -219,9 +219,9 @@
                     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample"><!-- /.card-body -->
                       <div class="card-body">
                         <div class="list-group list-group-flush">
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
-                          <a href="#" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
+                          <a href="topic-results.html" class="list-group-item list-group-item-action">Some sub topic</a>
                         </div>
                       </div>
                     </div><!-- /.card-body -->
