--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">-->
-    <!-- My CSS -->
+    <!-- Bootstrap CSS + My custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
     <title>HelpOne - Sistema de HelpDesk | Projeto Integrado Multidisciplinar III</title>
