make open-chamado page

--- a/home-suporte.html
+++ b/home-suporte.html
@@ -46,7 +46,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#">Meus chamados</a>
-                  <a class="dropdown-item" href="#">Abrir chamado</a>
+                  <a class="dropdown-item" href="open-chamado.html">Abrir chamado</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" href="index.html">Retornar ao SiCaPEx</a>
                 </div>
@@ -253,18 +253,18 @@
             <div class="col-lg-3 pt-4 pt-sm-0 pt-lg-5">
               <div class="row">
                 <div class="col-sm-6 col-lg-12">
-                  <button type="button" class="btn btn-lg btn-block btn-info py-4 rounded-0">
+                  <a role="button" href="#" class="btn btn-lg btn-block btn-info py-4 rounded-0">
                     <span class="d-block mb-1"><i class="fas fa-3x fa-chart-bar"></i></span>
                     Consultar chamados
                     <small class="d-block">Some text here of button</small>
-                  </button>
+                  </a>
                 </div>
                 <div class="col-sm-6 col-lg-12">
-                  <button type="button" class="btn btn-lg btn-block btn-info py-4 rounded-0 mt-5 mt-sm-0 mt-lg-5">
+                  <a role="button" href="open-chamado.html" class="btn btn-lg btn-block btn-info py-4 rounded-0 mt-5 mt-sm-0 mt-lg-5">
                     <span class="d-block mb-1"><i class="fas fa-3x fa-chart-bar"></i></span>
                     Abrir chamado
                     <small class="d-block">Some text here of button</small>
-                  </button>
+                  </a>
                 </div>
               </div>
             </div><!-- /.col-btns -->
