--- a/topic-results.html
+++ b/topic-results.html
@@ -63,7 +63,8 @@
               <nav class="breadcrumb-box" aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent m-0 justify-content-center justify-content-md-start">
                   <li class="breadcrumb-item"><a href="home-operador.html" class="text-warning">Home</a></li>
-                  <li class="breadcrumb-item active text-light" aria-current="page">Resultados da pesquisa</li>
+                  <li class="breadcrumb-item"><a href="topic-results.html" class="text-warning">Tópico</a></li>
+                  <li class="breadcrumb-item active text-light" aria-current="page">Subtópico</li>
                 </ol>
               </nav>
             </div>
