make a lot of pages

--- a/home-suporte.html
+++ b/home-suporte.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-expand-sm navbar-light bg-light shadow-sm">
         <div class="container">
           <a class="nav-link d-none d-md-block" href="index.html">Retornar ao SiCaPEx</a>
-          <a class="navbar-brand mr-0 my-1" href="home-operador.html">
+          <a class="navbar-brand mr-0 my-1" href="home-suporte.html">
             <img src="assets/images/logo.png" height="55" alt="HelpOne - Sistema de HelpDesk">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,32 +62,32 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-3">
-              <button type="button" class="btn btn-lg btn-block btn-info py-4">
+              <a role="button" href="supp-consult-chamado.html" class="btn btn-lg btn-block btn-info py-4">
                 <span class="d-block mb-1"><i class="fas fa-3x fa-list"></i></span>
                 Consultar chamados
-                <small class="d-block">Some text here of button</small>
-              </button>
+                <small class="d-block">Abertos para atendimento</small>
+              </a>
             </div>
             <div class="col-3">
-              <button type="button" class="btn btn-lg btn-block btn-info py-4">
+              <a role="button" href="#" class="btn btn-lg btn-block btn-info py-4 disabled">
                 <span class="d-block mb-1"><i class="fas fa-3x fa-file-alt"></i></span>
                 Gerenciar Artigos
                 <small class="d-block">Some text here of button</small>
-              </button>
+              </a>
             </div>
             <div class="col-3">
-              <button type="button" class="btn btn-lg btn-block btn-info py-4">
+              <a role="button" href="gerenciar-team.html" class="btn btn-lg btn-block btn-info py-4">
                 <span class="d-block mb-1"><i class="fas fa-3x fa-users"></i></span>
                 Gerenciar Equipe
                 <small class="d-block">Some text here of button</small>
-              </button>
+              </a>
             </div>
             <div class="col-3">
-              <button type="button" class="btn btn-lg btn-block btn-info py-4">
+              <a role="button" href="relatorios.html" class="btn btn-lg btn-block btn-info py-4 disabled">
                 <span class="d-block mb-1"><i class="fas fa-3x fa-chart-bar"></i></span>
                 Exibir Relatórios
                 <small class="d-block">Some text here of button</small>
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -253,7 +253,7 @@
             <div class="col-lg-3 pt-4 pt-sm-0 pt-lg-5">
               <div class="row">
                 <div class="col-sm-6 col-lg-12">
-                  <a role="button" href="#" class="btn btn-lg btn-block btn-info py-4 rounded-0">
+                  <a role="button" href="consult-chamado.html" class="btn btn-lg btn-block btn-info py-4 rounded-0">
                     <span class="d-block mb-1"><i class="fas fa-3x fa-chart-bar"></i></span>
                     Consultar chamados
                     <small class="d-block">Some text here of button</small>
@@ -276,9 +276,7 @@
     <footer class="footer border-top py-2">
       <div class="container-fluid text-center">
         <div class="footer__logo-box d-inline-block mx-4 my-3">
-          <a class="navbar-brand mr-0" href="home-operador.html">
-            <img src="assets/images/logo.png" height="50" alt="HelpOne - Sistema de HelpDesk">
-          </a>
+          <img src="assets/images/logo.png" height="50" alt="HelpOne - Sistema de HelpDesk">
         </div>
         <p class="footer__text d-inline-block mb-3 mt-2">
           Copyright @ 2018 | DGP - QGEx - Bloco E - 3º Piso - SMU - CEP 70630-901 - Brasília-DF 
