--- a/atender-chamado.html
+++ b/atender-chamado.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.10/summernote-bs4.css" type="text/css" />
 
 
-    <title>Cadastrar Chamado | HelpOne - Sistema de HelpDesk</title>
+    <title>Atender Chamado | HelpOne - Sistema de HelpDesk</title>
   </head>
   <body>
       
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-expand-sm navbar-light bg-light shadow-sm">
         <div class="container">
           <a class="nav-link d-none d-md-block" href="index.html">Retornar ao SiCaPEx</a>
-          <a class="navbar-brand mr-0 my-1" href="home-operador.html">
+          <a class="navbar-brand mr-0 my-1" href="home-suporte.html">
             <img src="assets/images/logo.png" height="55" alt="HelpOne - Sistema de HelpDesk">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,8 +65,9 @@
             <div class="col-md-8 col-lg-9 mb-3 mb-md-0">
               <nav class="breadcrumb-box" aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent m-0 justify-content-center justify-content-md-start">
-                  <li class="breadcrumb-item"><a href="home-operador.html" class="text-warning">Home</a></li>
-                  <li class="breadcrumb-item active text-light" aria-current="page">Cadastrar Chamado</li>
+                  <li class="breadcrumb-item"><a href="home-suporte.html" class="text-warning">Home</a></li>
+                  <li class="breadcrumb-item"><a href="supp-consult-chamado.html" class="text-warning">Consultar Chamados</a></li>
+                  <li class="breadcrumb-item active text-light" aria-current="page">Atender: #564</li>
                 </ol>
               </nav>
             </div>
@@ -87,47 +88,43 @@
         <div class="container">
           <div class="row py-5">
             <div class="col-12 text-center text-sm-left">
-              <h2 class="mb-4">Cadastrar chamado</h2>
-              <hr class="mb-5">
+              <h2 class="mb-4 border-bottom pb-3">#564 - Titulo do chamado aqui</h2>
+              <ol class="breadcrumb bg-transparent m-0 px-0">
+                <li class="breadcrumb-item">Tópico</li>
+                <li class="breadcrumb-item">Subtópico</li>
+                <li class="breadcrumb-item no-breadcrumb-divider"> - Aguardando Resposta</li>
+              </ol>
             </div><!-- ./ content-header -->
             <div class="col-md-7 col-lg-8 mb-5 text-center text-sm-left">
-              <form action="consult-chamado.html">
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Em que podemos ajudar?</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Tópico 1</option>
-                    <option>Tópico 2</option>
-                    <option>Tópico 3</option>
-                    <option>Tópico 4</option>
-                    <option>Tópico 5</option>
-                  </select>
+              <div class="chamado-box d-flex py-4"><!-- Chamado BOX -->
+                <div class="user-profile-box text-center mr-3 px-2" >
+                  <span class="d-block">
+                    <img class="rounded-circle" src="assets/images/user-circle.png" height="60" alt="Matheus Fernandes">
+                  </span>
+                  <span class="d-block">
+                    <strong style="font-size: .78rem;">User Name</strong>
+                  </span>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Qual problema está tendo com o &lt;topico selecionado&gt;?</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Subtópico 1</option>
-                    <option>Subtópico 2</option>
-                    <option>Subtópico 3</option>
-                    <option>Subtópico 4</option>
-                    <option>Subtópico 5</option>
-                  </select>
+                <div class="flex-grow-1 text-right">
+                  <div class="content-chamado d-flex text-left pl-3 pr-2 py-2 border">
+                    <div class="text-content p-1">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam commodi aperiam incidunt dolore totam facilis. Maiores consequatur repellat dicta quisquam tempore sapiente vero ipsam. Blanditiis perspiciatis aliquam quibusdam nesciunt suscipit!
+                      </p>
+                      <p class="mb-0">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit autem dolor eaque dolore[...]
+                      </p>
+                      <div class="show-more d-block text-right">
+                        <a href="#">mostrar mais <i class="fas fa-caret-down"></i></a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlInput1">Título do chamado</label>
-                  <input type="text" class="form-control" id="exampleFormControlInput1">
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Descrição do chamado</label>
-                  <textarea class="form-control" id="summernote" name="editordata"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlFile1">Anexos</label>
-                  <input type="file" class="form-control-file" id="anexos-files" name="anexos-files" multiple>
-                </div>
-                <button type="submit" class="btn btn-primary btn-info btn-lg mt-4">Cadastrar chamado</button>
+              </div><!-- /. Chamado BOX -->
+              <form action="supp-consult-chamado.html">
+                <button type="submit" class="btn btn-info btn-lg my-3 mr-2"><i class="fas fa-comment-dots mr-1"></i> Atender chamado</button>
               </form>
-            </div><!-- ./ content-body -->
-            
+            </div> <!-- ./ content-body -->
             <aside class="col-md-5 col-lg-4 pl-md-5 pt-2 text-center text-sm-left">
               <div class="artigos-relacionados mb-5"><!-- artigos-relacionados -->
                 <h2 class="h3 mb-3">Isso pode ajudar?</h2>
@@ -148,9 +145,7 @@
     <footer class="footer border-top py-2">
       <div class="container-fluid text-center">
         <div class="footer__logo-box d-inline-block mx-4 my-3">
-          <a class="navbar-brand mr-0" href="home-operador.html">
-            <img src="assets/images/logo.png" height="50" alt="HelpOne - Sistema de HelpDesk">
-          </a>
+          <img src="assets/images/logo.png" height="50" alt="HelpOne - Sistema de HelpDesk">
         </div>
         <p class="footer__text d-inline-block mb-3 mt-2">
           Copyright @ 2018 | DGP - QGEx - Bloco E - 3º Piso - SMU - CEP 70630-901 - Brasília-DF 
