--- a/gerenciar-team.html
+++ b/gerenciar-team.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.10/summernote-bs4.css" type="text/css" />
 
 
-    <title>Cadastrar Chamado | HelpOne - Sistema de HelpDesk</title>
+    <title>Gerenciar Equipes | HelpOne - Sistema de HelpDesk</title>
   </head>
   <body>
       
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-expand-sm navbar-light bg-light shadow-sm">
         <div class="container">
           <a class="nav-link d-none d-md-block" href="index.html">Retornar ao SiCaPEx</a>
-          <a class="navbar-brand mr-0 my-1" href="home-operador.html">
+          <a class="navbar-brand mr-0 my-1" href="home-suporte.html">
             <img src="assets/images/logo.png" height="55" alt="HelpOne - Sistema de HelpDesk">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,8 +65,8 @@
             <div class="col-md-8 col-lg-9 mb-3 mb-md-0">
               <nav class="breadcrumb-box" aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent m-0 justify-content-center justify-content-md-start">
-                  <li class="breadcrumb-item"><a href="home-operador.html" class="text-warning">Home</a></li>
-                  <li class="breadcrumb-item active text-light" aria-current="page">Cadastrar Chamado</li>
+                  <li class="breadcrumb-item"><a href="home-suporte.html" class="text-warning">Home</a></li>
+                  <li class="breadcrumb-item active text-light" aria-current="page">Gerenciar Equipes</li>
                 </ol>
               </nav>
             </div>
@@ -87,59 +87,83 @@
         <div class="container">
           <div class="row py-5">
             <div class="col-12 text-center text-sm-left">
-              <h2 class="mb-4">Cadastrar chamado</h2>
-              <hr class="mb-5">
-            </div><!-- ./ content-header -->
-            <div class="col-md-7 col-lg-8 mb-5 text-center text-sm-left">
-              <form action="consult-chamado.html">
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Em que podemos ajudar?</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Tópico 1</option>
-                    <option>Tópico 2</option>
-                    <option>Tópico 3</option>
-                    <option>Tópico 4</option>
-                    <option>Tópico 5</option>
-                  </select>
+              <h2 class="mb-4 border-bottom pb-3">Gerenciar Equipes</h2>
+              <div class="list-eq-dev"><!-- Lista Equipe Desenvolvimento -->
+                <h4 class="mb-4 mt-5">Equipes de Desenvolvimento</h4>
+                <table class="table table-hover border-right border-left border-bottom">
+                  <thead class="thead-light">
+                    <tr>
+                      <th scope="col">ID</th>
+                      <th scope="col">OM Localizada</th>
+                      <th scope="col">Qtd. integrantes</th>
+                      <th scope="col">Responsavel</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row"><a href="team-members.html">1</a></th>
+                      <td>Nome da OM</td>
+                      <td>08</td>
+                      <td><a href="team-members.html">Um Nome Do Responsavel</a></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="team-members.html">2</a></th>
+                      <td>OM nome local</td>
+                      <td>12</td>
+                      <td><a href="team-members.html">Um Nome Do Responsavel</a></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div><!-- /. Lista Equipe Desenvolvimento -->
+              <div class="list-eq-supp"><!-- Lista Equipe Suporte -->
+                <h4 class="mb-4 mt-5">Equipes de Suporte</h4>
+                <div class="filtro border-top border-right border-left px-4 py-3">
+                  <a href="#" class="text-secondary filtro__link"><i class="fas fa-filter"></i></a>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Qual problema está tendo com o &lt;topico selecionado&gt;?</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Subtópico 1</option>
-                    <option>Subtópico 2</option>
-                    <option>Subtópico 3</option>
-                    <option>Subtópico 4</option>
-                    <option>Subtópico 5</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlInput1">Título do chamado</label>
-                  <input type="text" class="form-control" id="exampleFormControlInput1">
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Descrição do chamado</label>
-                  <textarea class="form-control" id="summernote" name="editordata"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlFile1">Anexos</label>
-                  <input type="file" class="form-control-file" id="anexos-files" name="anexos-files" multiple>
-                </div>
-                <button type="submit" class="btn btn-primary btn-info btn-lg mt-4">Cadastrar chamado</button>
-              </form>
-            </div><!-- ./ content-body -->
-            
-            <aside class="col-md-5 col-lg-4 pl-md-5 pt-2 text-center text-sm-left">
-              <div class="artigos-relacionados mb-5"><!-- artigos-relacionados -->
-                <h2 class="h3 mb-3">Isso pode ajudar?</h2>
-                <div class="list-group list-group-flush">
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">Is artigo title</a>
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">Some artigo title here</a>
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">This artigo title in home</a>
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">Some artigo title</a>
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">One artigo title there</a>
-                </div>
-              </div><!-- /. artigos-relacionados -->
-            </aside><!-- ./ sidebar -->
+                <table class="table table-hover border-right border-left border-bottom">
+                  <thead class="thead-light">
+                    <tr>
+                      <th scope="col">ID</th>
+                      <th scope="col">OM Localizada</th>
+                      <th scope="col">Qtd. integrantes</th>
+                      <th scope="col">Responsavel</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row"><a href="team-members.html">3</a></th>
+                      <td>OM nome local</td>
+                      <td>07</td>
+                      <td><a href="team-members.html">Um Nome Do Responsavel</a></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="team-members.html">4</a></th>
+                      <td>OM nome local</td>
+                      <td>09</td>
+                      <td><a href="team-members.html">Um Nome Do Responsavel</a></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="team-members.html">5</a></th>
+                      <td>OM nome local</td>
+                      <td>10</td>
+                      <td><a href="team-members.html">Um Nome Do Responsavel</a></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="team-members.html">6</a></th>
+                      <td>OM nome local</td>
+                      <td>08</td>
+                      <td><a href="team-members.html">Um Nome Do Responsavel</a></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="team-members.html">7</a></th>
+                      <td>OM nome local</td>
+                      <td>07</td>
+                      <td><a href="team-members.html">Um Nome Do Responsavel</a></td>
+                    </tr>
+                   </tbody>
+                </table>
+              </div><!-- /. Lista Equipe Suporte -->
+            </div><!-- /. content-header -->
           </div>
         </div>
       </section>
