--- a/home-operador.html
+++ b/home-operador.html
@@ -259,7 +259,7 @@
 					<div class="col-lg-3 pt-4 pt-sm-0 pt-lg-5">
 						<div class="row">
 							<div class="col-sm-6 col-lg-12">
-								<a role="button" href="#" class="btn btn-lg btn-block btn-info py-4 rounded-0">
+								<a role="button" href="consult-chamado.html" class="btn btn-lg btn-block btn-info py-4 rounded-0">
                     <span class="d-block mb-1"><i class="fas fa-3x fa-chart-bar"></i></span>
                     Consultar chamados
                     <small class="d-block">Some text here of button</small>
