--- a/team-members.html
+++ b/team-members.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.10/summernote-bs4.css" type="text/css" />
 
 
-    <title>Cadastrar Chamado | HelpOne - Sistema de HelpDesk</title>
+    <title>Gerenciar Equipes | HelpOne - Sistema de HelpDesk</title>
   </head>
   <body>
       
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-expand-sm navbar-light bg-light shadow-sm">
         <div class="container">
           <a class="nav-link d-none d-md-block" href="index.html">Retornar ao SiCaPEx</a>
-          <a class="navbar-brand mr-0 my-1" href="home-operador.html">
+          <a class="navbar-brand mr-0 my-1" href="home-suporte.html">
             <img src="assets/images/logo.png" height="55" alt="HelpOne - Sistema de HelpDesk">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,8 +65,9 @@
             <div class="col-md-8 col-lg-9 mb-3 mb-md-0">
               <nav class="breadcrumb-box" aria-label="breadcrumb">
                 <ol class="breadcrumb bg-transparent m-0 justify-content-center justify-content-md-start">
-                  <li class="breadcrumb-item"><a href="home-operador.html" class="text-warning">Home</a></li>
-                  <li class="breadcrumb-item active text-light" aria-current="page">Cadastrar Chamado</li>
+                  <li class="breadcrumb-item"><a href="home-suporte.html" class="text-warning">Home</a></li>
+                  <li class="breadcrumb-item"><a href="gerenciar-team.html" class="text-warning">Gerenciar Equipes</a></li>
+                  <li class="breadcrumb-item active text-light" aria-current="page">Equipe: #2</li>
                 </ol>
               </nav>
             </div>
@@ -85,61 +86,33 @@
     <main>
       <section class="content">
         <div class="container">
-          <div class="row py-5">
+          <div class="row py-5 mb-4">
             <div class="col-12 text-center text-sm-left">
-              <h2 class="mb-4">Cadastrar chamado</h2>
-              <hr class="mb-5">
-            </div><!-- ./ content-header -->
-            <div class="col-md-7 col-lg-8 mb-5 text-center text-sm-left">
-              <form action="consult-chamado.html">
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Em que podemos ajudar?</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Tópico 1</option>
-                    <option>Tópico 2</option>
-                    <option>Tópico 3</option>
-                    <option>Tópico 4</option>
-                    <option>Tópico 5</option>
-                  </select>
+              <h2 class="mb-4 border-bottom pb-3">Gerenciar Equipes</h2>
+              <h4 class="mb-4 mt-5">Equipe: #2 - OM</h4>
+              <div class="row">
+                <div class="col border p-3">
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <li class="list-group-item">Porta ac consectetur ac</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                  </ul>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Qual problema está tendo com o &lt;topico selecionado&gt;?</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>Subtópico 1</option>
-                    <option>Subtópico 2</option>
-                    <option>Subtópico 3</option>
-                    <option>Subtópico 4</option>
-                    <option>Subtópico 5</option>
-                  </select>
+                <div class="col-2 text-center d-flex flex-column d-flex justify-content-center">
+                  <button type="button" class="btn btn-danger my-2 mx-4"><i class="fas fa-angle-double-right fa-lg"></i></button>
+                  <button type="button" class="btn btn-success my-2 mx-4"><i class="fas fa-angle-double-left fa-lg"></i></button>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlInput1">Título do chamado</label>
-                  <input type="text" class="form-control" id="exampleFormControlInput1">
+                <div class="col border p-3">
+                  <div class="search-form text-center">
+                    <form class="form-inline my-2 my-lg-0">
+                      <i class="fas fa-search"></i><input class="form-control mr-sm-2 py-1 w-100" type="search" placeholder="Search" aria-label="Search">
+                    </form>
+                  </div>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Descrição do chamado</label>
-                  <textarea class="form-control" id="summernote" name="editordata"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlFile1">Anexos</label>
-                  <input type="file" class="form-control-file" id="anexos-files" name="anexos-files" multiple>
-                </div>
-                <button type="submit" class="btn btn-primary btn-info btn-lg mt-4">Cadastrar chamado</button>
-              </form>
-            </div><!-- ./ content-body -->
-            
-            <aside class="col-md-5 col-lg-4 pl-md-5 pt-2 text-center text-sm-left">
-              <div class="artigos-relacionados mb-5"><!-- artigos-relacionados -->
-                <h2 class="h3 mb-3">Isso pode ajudar?</h2>
-                <div class="list-group list-group-flush">
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">Is artigo title</a>
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">Some artigo title here</a>
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">This artigo title in home</a>
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">Some artigo title</a>
-                  <a href="artigo-page.html" class="list-group-item list-group-item-action">One artigo title there</a>
-                </div>
-              </div><!-- /. artigos-relacionados -->
-            </aside><!-- ./ sidebar -->
+              </div>
+            </div><!-- /. content-header -->
           </div>
         </div>
       </section>
